...
                            week: nil
                        )
                    } else {
                        print("❌ Day index not found")
                    }
                }) {
                    Text("Start Workout")
                }
                .buttonStyle(PrimaryButton())
                .padding(.horizontal)
                
                // Exercises list
                VStack(alignment: .leading, spacing: 16) {
...
